fixed broken url, style fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2024,90 +2024,6 @@ width: -webkit-calc(100% / 4);
 	opacity: 1;
 }
 
-/****************************************************************/
-/***********************  PIRATE FORMS style ********************/
-/****************************************************************/
-
-.pirate_forms {
-	padding-bottom: 95px;
-}
-.pirate_forms input, .pirate_forms textarea {
-	width: 100%;
-	margin: auto;
-	border-radius: 4px !important;
-}
-.pirate_forms input {
-	text-align: left;
-	text-transform: none;
-	padding: 9px;
-	min-height: 46px;
-	padding-left: 15px !important;
-	display: inline-block;
-	border-radius: 4px;
-	background: rgba(255,255,255, 0.95);
-}
-.pirate_forms textarea {
-	width: 100% !important;
-	text-align: left;
-	text-transform: none;
-	padding: 9px;
-	min-height: 250px;
-	padding-left: 15px;
-	display: inline-block;
-	border-radius: 4px;
-	background: rgba(255,255,255, 0.95);
-}
-.pirate_forms .custom-button {
-	float: right;
-	margin-right: 15px;
-}
-.pirate-forms-g-recaptcha {
-	margin-left: 15px;
-	display: none;
-}
-.pirate_forms .notification p {
-	border-radius: 3px;
-	color: #FFF;
-	padding: 5px 10px;
-	display: inline-block;
-	margin-bottom: 10px;
-}
-.pirate_forms_error_box {
-	text-align:center;
-}
-.pirate_forms_error_box p {
-	background: #E96656;
-	border-radius: 3px;
-	color: #FFF;
-	padding: 5px 10px;
-	display: inline-block;
-	margin-bottom: 10px;
-}
-.pirate_forms_thankyou_wrap p {
-	background: #34d293;
-	border-radius: 3px;
-	color: #FFF;
-	padding: 5px 10px;
-	display: inline-block;
-	margin-bottom: 10px;
-}
-.pirate_forms .pirate-forms-submit-button {
-	float: right;
-	margin-right: 15px;
-	color: #FFF !important;
-	-webkit-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-}
-.pirate_forms .pirate-forms-submit-button:hover {
-	color: #FFF;
-	background: #cb4332;
-}
-.pirate_forms_wrap label {
-	width: 100%;
-	float: left;
-	height: 1px;
-}
-
 .zerif_hidden_if_not_customizer {
 	display: none !important;
 }
@@ -2183,7 +2099,6 @@ width: -webkit-calc(100% / 4);
 	color: #FFF;
 }
 .about-us .row {
-	margin-left: -15px;
 	margin-right: -15px;
 }
 .about-us .big-intro {
